BUG: Fix bug in updateFood, response give old data

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,13 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "target": "es2018",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "CommonJS",
+    "moduleResolution": "node",
     "lib": ["es2018", "dom"],
     "outDir": "./dist",
     "rootDir": "./src",
-    "strict": true,
-    "noImplicitAny": true,
+    "strict": false,
+    "noImplicitAny": false,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "declaration": true,
