--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
