--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   graphql-api:
+    container_name: graphql-api
     build:
       context: .
       dockerfile: Dockerfile
@@ -12,3 +13,6 @@ services:
     environment:
       NODE_ENV: production
     restart: unless-stopped
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
