--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "target": "es2018",
-    "module": "CommonJS",
+    "module": "ESNext",
     "moduleResolution": "node",
     "lib": ["es2018", "dom"],
     "outDir": "./dist",
