--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.14.1",
+    "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.21"
   }
 }
