--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,7 +41,10 @@ jobs:
           ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
             cd /var/www/angelicamarker.online
             git pull
-            docker-compose down
-            docker-compose build
-            docker-compose up -d
+            
+            # Använd Docker CLI direkt istället för docker-compose
+            docker stop graphql-api || true
+            docker rm graphql-api || true
+            docker build -t graphql-api .
+            docker run -d --name graphql-api -p 4000:4000 --restart unless-stopped --env-file .env -e NODE_ENV=production graphql-api
           EOF
